@@ -88,6 +88,9 @@ NSString * const GSHTTPPropertyKeyFileKey
 NSString * const GSHTTPPropertyPasswordKey
   = @"GSHTTPPropertyPasswordKey";
 
+NSString * const GSHTTPPropertyReturnAllKey
+  = @"GSHTTPPropertyReturnAllKey";
+
 
 /**
  * <p>
